<resources>
    <string name="app_name">File List</string>
    <string name="menuItem_appEnd">アプリ終了</string>
    <string name="textviewCap">パスを表示する</string>
    <string name="No_Data">データがありません</string>
    <string name="List_Name">ファイル名</string>
    <string name="menuItem_copy">コピー</string>
    <string name="menuItem_paste">貼付</string>
    <string name="menuItem_delete">削除</string>
    <string name="menuItem_cut">切取り</string>
    <string name="menuItem_upRoot">ルートへ戻る</string>
    <string name="menuItem_upFolder">１つ上の階層へ戻る</string>
    <string name="menuItem_cancel">キャンセル</string>
    <string name="initial_disp_char">－－－</string>
    <string name="alertDlg_title">通知</string>
    <string name="alertDlg_q_appEnd">アプリを終了します。\nよろしいですか？</string>
    <string name="alertDlg_q_deleteFile">本当に削除しますか？</string>
    <string name="alertDlg_q_cancelChecked">処理を「継続」すると選択中の項目が解除されます。\nよろしいですか？</string>
    <string name="alertDlg_notSpecifidFile">ファイルを指定して下さい。</string>
    <string name="alertDlg_canNotCopytoSameDirectory">同じディレクトリーには［貼り付け］出来ません。</string>
    <string name="alertDlg_cuuerntIsRoot">現在、ルートディレクトリーです。</string>
    <string name="alertDlg_IllegalParameter">変数が異常です。</string>
    <string name="alertDlg_fileAlreadyExist">既に存在します。\n確認して下さい。</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delay">Pending</string>
</resources>
