<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_copy"
        android:title="@string/menuItem_copy"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_paste"
        android:title="@string/menuItem_paste"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/menuItem_delete"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_upFolder"
        android:title="@string/menuItem_upFolder"
        android:orderInCategory="400"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_upRoot"
        android:title="@string/menuItem_upRoot"
        android:orderInCategory="500"
        app:showAsAction="never" />
</menu>